[project]
name = "bbcom-mcp"
version = "1.0.0"
description = "MCP Server for BBCom serial communication tool - enables LLMs to access serial data via mirror mode"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "BBCom Team"}
]
keywords = ["mcp", "serial", "bbcom", "llm", "embedded"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Embedded Systems",
]

dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
bbcom-mcp = "bbcom_mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
